<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="communicate">Communicate</string>

    <string name="refresh">Request</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="search_history">Search history</string>

    <string name="hint_enter_password">Enter Password</string>
    <string name="button_swap_color">SWAP COLOR</string>
    <string name="c">C</string>
    <string name="date_of_request">Date of request</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_name_descending">Sort by name descending</string>
    <string name="sort_by_date_descending">Sort by date descending</string>
    <string name="position">Get weather for your position</string>
    <string name="maps">Maps</string>
    <string name="ok_bth_title">OK</string>
    <string name="current_position">Current position</string>
    <string name="do_you_want_delete">Do you want to remove this response?</string>
    <string name="want_delete_all">Do you want to delete all responses?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="all_clouds">All clouds</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_degree">Wind degree</string>
    <string name="visibility">Visibility</string>
    <string name="m_s">m/s</string>
</resources>