<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <group android:title="@string/sort">

        <item
            android:id="@+id/sort_by_name"
            android:title="@string/sort_by_name"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_by_date"
            android:title="@string/sort_by_date"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_by_name_descending"
            android:title="@string/sort_by_name_descending"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_by_date_descending"
            android:title="@string/sort_by_date_descending"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>